# logseq-api-mcp

./: .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  example.md  pyproject.toml  safety-report.json
.github/: CI_CD_SETUP.md  badges.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  ci.yml  comprehensive-test.yml  pr-validation.yml  quality.yml  release.yml  test.yml
scripts/: fix-code.sh
src/: registry.py  server.py
src/tools/: __init__.py  append_block_in_page.py  create_page.py  edit_block.py  get_all_page_content.py  get_all_pages.py  get_block_content.py  get_linked_flashcards.py  get_page_blocks.py  get_page_links.py
tests/: README.md  TEST_SUMMARY.md  __init__.py  conftest.py  test_append_block_in_page.py  test_create_page.py  test_edit_block.py  test_get_all_page_content.py  test_get_all_pages.py  test_get_block_content.py  test_get_linked_flashcards.py  test_get_page_blocks.py  test_get_page_links.py  test_get_tools.py  test_mcp_server.py  test_runner.py
