[project]
name = "logseq-api-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.4",
    "load-dotenv>=0.1.0",
    "mcp[cli]>=1.9.2",
    "pathlib>=1.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]
