[project]
name = "logseq-api-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.4",
    "load-dotenv>=0.1.0",
    "mcp[cli]>=1.9.2",
    "pathlib>=1.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
    "mypy>=1.8.0",
    "bandit>=1.7.5",
    "safety>=2.3.5",
    "pip-licenses>=4.3.0",
]
test = [
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=4.1.0",
]
